[package]
name = "volt"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
futures-util = "0.3"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
tokio = { version = "1.46.1", features = ["full"] } 
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = "2.5.4"
