[package]
name = "volt"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
copypasta = "0.10.2"
crossterm = "0.29.0"
futures = "0.3.31"
futures-util = "0.3"
humantime = "2.2.0"
native-tls = "0.2.14"
rand = "0.9.2"
rand_core = "0.9.3"
ratatui = "0.29.0"
rustls = { version = "0.23.31", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
tokio = { version = "1.46.1", features = ["full"] } 
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
unicode-segmentation = "1.12.0"
url = "2.5.4"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
